[package]
authors = ["Nimi Wariboko <nimi.wariboko@livereachmedia.com>"]
edition = "2018"
links = "tflite"
name = "edgetpu"
version = "0.1.0"

[build-dependencies]
cpp_build = "0.5"

[dependencies]
cpp = "0.5"
libc = "0.2"
thiserror = "1.0.17"
tflite = { git = "https://github.com/Finfalter/tflite-rs", rev = "e6eecd4" }

[dev-dependencies]
bytes = "1.2.1"
byteorder = "1.3.4"
image = "0.24.3"
